Export docker files
Related-to: TIE-158
